GAMEDATADIR = $(datadir)/maelstrom

AM_CPPFLAGS = -DDATADIR=\"$(GAMEDATADIR)\" -DSTATEDIR=\"$(localstatedir)\"
AM_CXXFLAGS = -std=c++11 $(SDL_CFLAGS) $(SDL_NET_CFLAGS)
AM_LDFLAGS  =  $(SDL_LIBS) $(SDL_NET_LIBS) $(SDL_MIXER_LIBS)

SUBDIRS = netlogic screenlib maclib

bin_PROGRAMS = Maelstrom Maelstrom-netd

Maelstrom_SOURCES =		\
	Maelstrom.h		\
	Maelstrom_Globals.h	\
	buttonlist.h		\
	checksum.cpp		\
	checksum.h		\
	colortable.h		\
	controls.cpp		\
	controls.h		\
	dialog.cpp		\
	dialog.h		\
	fastrand.cpp		\
	fastrand.h		\
	init.cpp		\
	load.cpp		\
	load.h			\
	logic.h			\
	main.cpp		\
	myerror.cpp		\
	myerror.h		\
	path.h			\
	public_key.h		\
	rect.cpp		\
	rect.h			\
	sound.h			\
	sound.cpp		\
	scores.cpp		\
	scores.h

Maelstrom_LDADD = 			\
	netlogic/liblogic.a		\
	screenlib/libSDLscreen.a	\
	maclib/libSDLmac.a

EXTRA_DIST =			\
	autogen.sh		\
	VisualC.zip		\
	PBProjects.tar.gz	\
	MPWmake.sea.bin		\
	AUTHORS			\
	Changelog		\
	README.joystick		\
	README.network		\
	README.options		\
	COPYING			\
	COPYING.GPL		\
	Images			\
	Maelstrom_Fonts		\
	sounds/*.ogg		\
	Maelstrom_Sprites	\
	Maelstrom-Scores	\
	ico_o			\
	icon.bmp icon.xpm	\
	Maelstrom.spec

DIST_SUBDIRS = $(SUBDIRS) Images Docs

# Special install rule for the game
install: install_bin install_gamedata install_scores install_gamedocs

install_bin:
	install Maelstrom Maelstrom-netd $(bindir)

install_gamedata:
	install -d $(GAMEDATADIR)
	install \
		Maelstrom_Fonts		\
		Maelstrom_Sprites	\
		icon.bmp icon.xpm	\
			$(GAMEDATADIR)

	install -d $(GAMEDATADIR)/Images/
	install Images/* $(GAMEDATADIR)/Images/

	install -d $(GAMEDATADIR)/sounds
	install sounds/* $(GAMEDATADIR)/sounds

install_scores:
	install -d $(localstatedir)
	test    -e $(localstatedir)/Maelstrom-Scores || install -m 666 Maelstrom-Scores $(localstatedir)

install_gamedocs:
	install -d $(docdir)
	install README* COPYING* Docs/* $(docdir)

# Rule to build tar-gzipped distribution package
$(PACKAGE)-$(VERSION).tar.gz: dist

# Rule to build RPM distribution package
rpm: $(PACKAGE)-$(VERSION).tar.gz
	rpm -ta $(PACKAGE)-$(VERSION).tar.gz

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
			echo '# Generated by Makefile. Do not edit.'; echo; \
			$(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
			echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi
