AM_CXXFLAGS = -std=c++11 $(SDL2_CFLAGS)

noinst_LIBRARIES = liblogic.a

liblogic_a_SOURCES =		\
	../Maelstrom_Globals.h	\
	../load.h		\
	../sound.h		\
	about.cpp		\
	blit.cpp		\
	game.cpp		\
	globals.h		\
	logic.cpp		\
	make.cpp		\
	make.h			\
	netlogic.h		\
	netplay.cpp		\
	netplay.h		\
	object.cpp		\
	object.h		\
	objects.cpp		\
	objects.h		\
	player.cpp		\
	player.h		\
	protocol.h		\
	shinobi.h
